--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,11 @@ edition = "2021"
 
 [dependencies]
 env_logger = "0.10.0"
+glam = "0.24.2"
 instant = "0.1.12"
 pollster = "0.3.0"
 wasm-bindgen = "0.2.87"
 web-sys = { version = "0.3.64", features = ["HtmlCanvasElement"] }
 wgpu = { version = "0.17.0", features = ["webgl"] }
 winit = "0.28.7"
-yew = "0.20.0"
+yew = { version = "0.20.0", features = ["csr"] }
