--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+console_log = "1.0.0"
 env_logger = "0.10.2"
 glam = "0.25.0"
-instant = "0.1.12"
+gloo = "0.11.0"
+instant = { version = "0.1.12", features = [] }
+log = "0.4.21"
 pollster = "0.3.0"
 wasm-bindgen = "0.2.92"
+wasm-bindgen-futures = "0.4.42"
 web-sys = { version = "0.3.69", features = ["HtmlCanvasElement"] }
 # wgpu = { version = "0.18.0", features = ["webgl"] }
-wgpu = { git = "https://github.com/gfx-rs/wgpu.git", features = ["webgl"] }
-winit = "0.29"
-yew = { version = "0.21.0", features = ["csr"] }
+wgpu = { git = "https://github.com/gfx-rs/wgpu.git" } #, features = ["webgl"] }
+winit = { version = "0.29", no-default-features = true}
+yew = { version = "0.20.0", features = ["csr"] }
