--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ log = "0.4.21"
 pollster = "0.3.0"
 wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
-web-sys = { version = "0.3.69", features = ["HtmlCanvasElement"] }
+web-sys = { version = "0.3.69", features = ["HtmlCanvasElement", "MouseEvent"] }
 # wgpu = { version = "0.18.0", features = ["webgl"] }
 wgpu = { git = "https://github.com/gfx-rs/wgpu.git" } #, features = ["webgl"] }
 winit = { version = "0.29", no-default-features = true}
